--- a/index.html
+++ b/index.html
@@ -751,11 +751,11 @@
             <div class="hero-content">
                 <div class="pre-title">UI/UX Designer</div>
                 <h1>Hello, I'm <span>Abhay M</span></h1>
-                <p class="hero-subtitle">A passionate Electronics & Communication Engineering student with expertise in UI/UX design, web development, and embedded systems.</p>
+                <p class="hero-subtitle">A passionate Electronics & Communication Engineering student with expertise in UI/UX design, web development.</p>
                 <div>
                     <a href="#contact" class="btn">Contact Me</a>
                     <a href="#projects" class="btn btn-outline">View Projects</a>
-                    <a href="resume.pdf" class="btn btn-outline" target="_blank">View Resume</a>
+                    <a href="https://onedrive.live.com/?cid=D0F52B460B9F2705&id=D0F52B460B9F2705%21s1c1887350bec43dd9d2c010aae5afc63&parId=root&o=OneUp" class="btn btn-outline" target="_blank">View Resume</a>
                 </div>
             </div>
             <div class="hero-image">
@@ -809,7 +809,7 @@
                     <h3 class="skill-title">Frontend Development</h3>
                     <ul class="skill-list">
                         <li>HTML (55%)</li>
-                        <li>CSS (Advanced)</li>
+                        <li>CSS (intermediate)</li>
                         <li>Bootstrap</li>
                         <li>Basic JavaScript</li>
                     </ul>
@@ -827,8 +827,8 @@
                     <h3 class="skill-title">Programming & Tools</h3>
                     <ul class="skill-list">
                         <li>Python (Basic)</li>
-                        <li>MATLAB</li>
-                        <li>Git & GitHub</li>
+                        <li>MATLAB basic</li>
+                        <li>GitHub</li>
                     </ul>
                 </div>
                 
